feature: intro updated;

--- a/index.html
+++ b/index.html
@@ -118,46 +118,35 @@
         <div class="container">
           <div class="about-greetings">Greetings!</div>
           <div class="about-introduction">
-            I’m <strong>Ahmed Ryan</strong>, a dedicated
-            <strong>Software Engineer</strong> with around
+            I’m Ahmed Ryan, a Software Engineer with around
             <strong>3 years of experience</strong> in software development,
-            particularly in the <strong>web domain</strong>. I graduated with a
-            <strong>Bachelor’s degree in Software Engineering</strong> from the
+            particularly in the web domain. I graduated with a
+            <strong>Bachelor’s in Software Engineering</strong> from the
             <strong
               >Institute of Information Technology, University of Dhaka</strong
-            >, recognized as a leading institution for Software Engineering in
-            Bangladesh. My research interests include
-            <strong>security test automation</strong>,
-            <strong>malware analysis</strong>, and
-            <strong>exploit development</strong> to enhance software security,
-            inspired by my final year project and industry experience.
+            >, recognized as a leading institution in Bangladesh. My interest in
+            software security began in 2020 when I participated in a national
+            <strong>CTF competition</strong>. During my internship in 2022
+            semester, I worked on an in-house HR portal, applying
+            <strong>OWASP standards</strong> to secure APIs from external
+            threats and mitigate vulnerabilities.
           </div>
 
           <div class="about-experience">
-            In 2020, I participated in a national CTF competition where my team
-            achieved <strong>20th place out of 234</strong>, which sparked my
-            interest in software security. In addition, I completed an
-            internship in my 7th semester, focusing on an in-house HR portal
-            where I emphasized <strong>secure software development</strong> by
-            applying <strong>OWASP standards</strong> to protect APIs from
-            external threats and identify and mitigate potential
-            vulnerabilities. These foundational experiences led to my final
-            semester project, where I implemented a tool based on a research
-            paper for <strong>automating web API testing</strong>. Currently, I
-            develop <strong>secure web-based software solutions</strong> for
-            European clients and continue to expand my security knowledge
-            through several <strong>certifications</strong>.
-          </div>
-          <div class="about-experience">
-            Furthermore, I am researching how to apply
-            <strong>in-context learning capabilities</strong> of AI models to
-            improve the automated detection of community smells in software
-            under <strong>Intelligent Systems and HCI Research Group</strong>,
-            further enhancing my research skills. This combination of industry
-            and research experience has equipped me to effectively bridge theory
-            and practice, and I am now actively seeking a
-            <strong>PhD position in Software Security</strong> for
-            <strong>Fall ‘25</strong>.
+            In my final year, I developed a tool for
+            <strong>automating web API testing</strong>, based on a research
+            paper. Currently, I work at <strong>Cefalo</strong>, a reputable
+            software company, where I create
+            <strong>secure web-based software solutions</strong> for European
+            clients. I continue expanding my security knowledge through
+            certifications. Additionally, I’m involved in research within the
+            <strong>Intelligent Systems and HCI Research Group</strong>, where
+            I’m exploring how to apply AI to improve the
+            <strong>automated detection of community smells</strong> in software
+            systems. This blend of industry experience and research has equipped
+            me to effectively bridge theory and practice, and I’m actively
+            seeking a <strong>PhD position in Software Security</strong> for
+            Fall ’25.
           </div>
 
           <div class="about-research-introduction">
