feature: info updated;

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             software company, where I create
             <strong>secure web-based software solutions</strong> for European
             clients. I continue expanding my security knowledge through
-            certifications. Additionally, I’m involved in research within the
+            certifications. Additionally, I’m involved in research with the
             <strong>Intelligent Systems and HCI Research Group</strong>, where
             I’m exploring how to apply AI to improve the
             <strong>automated detection of community smells</strong> in software
