feature: info updated;

--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
               >Institute of Information Technology, University of Dhaka</strong
             >, recognized as a leading institution in Bangladesh. My interest in
             software security began in 2020 when I participated in a national
-            <strong>CTF competition</strong>. During my internship in 2022
-            semester, I worked on an in-house HR portal, applying
-            <strong>OWASP standards</strong> to secure APIs from external
-            threats and mitigate vulnerabilities.
+            <strong>CTF competition</strong>. During my 2022 internship, I
+            worked on an in-house HR portal where I applied
+            <strong>OWASP standards</strong> to develop a secure web
+            application, protecting it from external threats and addressing
+            vulnerabilities.
           </div>
 
           <div class="about-experience">
