--- a/html/skill.html
+++ b/html/skill.html
@@ -14,7 +14,22 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Education</title>
+    <title>Ahmed Ryan</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-BH8V4Y4GWW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-BH8V4Y4GWW");
+    </script>
   </head>
   <body>
     <!-- navbar begins -->
