feature: description updated;

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               >Institute of Information Technology, University of Dhaka</strong
             >, recognized as a leading institution in Bangladesh. My interest in
             software security began in 2020 when I participated in a national
-            <strong>CTF competition</strong>. During my 2022 internship, I
+            <strong>CTF competition</strong>. During my internship in 2022, I
             worked on an in-house HR portal where I applied
             <strong>OWASP standards</strong> to develop a secure web
             application, protecting it from external threats and addressing
@@ -169,9 +169,9 @@
             Research Interest Areas:
           </div>
           <ul class="about-research-interests">
-            <li>Security Test Automation</li>
             <li>Malware Analysis and Detection Techniques</li>
             <li>Vulnerability Research and Exploit Development</li>
+            <li>Software Test Automation</li>
           </ul>
 
           <p class="about-contact-me">
