feature: description updated;

--- a/html/skill.html
+++ b/html/skill.html
@@ -240,14 +240,18 @@
           <div class="skill-title">Certifications</div>
           <ul>
             <li>
-              <div class="skill-heading">Complete Beginner</div>
+              <a
+                href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-QSDBO8ZMTY.png"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="skill-heading">Complete Beginner</div>
+              </a>
               <div class="skill-organization">
                 <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
                 <p class="skill-date">Sept, 2024</p>
               </div>
               <div class="skill-subheading">
-                <!-- <p>Skills</p>
-                <p>|</p> -->
                 <p>
                   Kali Linux | Nmap | OWASP | Burp Suite | John the Ripper |
                   Metasploit
@@ -255,14 +259,18 @@
               </div>
             </li>
             <li>
-              <div class="skill-heading">Introduction to Cyber Security</div>
+              <a
+                href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-J3KIUPW33Q.png"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="skill-heading">Introduction to Cyber Security</div>
+              </a>
               <div class="skill-organization">
                 <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
                 <p class="skill-date">Sept, 2024</p>
               </div>
               <div class="skill-subheading">
-                <!-- <p>Skills</p>
-                <p>|</p> -->
                 <p>
                   Digital Forensics | Security Operations | Web Application
                   Security | Network Security
@@ -270,14 +278,18 @@
               </div>
             </li>
             <li>
-              <div class="skill-heading">Pre Security</div>
+              <a
+                href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-MDVZENTFUM.png"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="skill-heading">Pre Security</div>
+              </a>
               <div class="skill-organization">
                 <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
                 <p class="skill-date">Sept, 2024</p>
               </div>
               <div class="skill-subheading">
-                <!-- <p>Skills</p>
-                <p>|</p> -->
                 <p>
                   Linux | Windows | Hypertext Transfer Protocol (HTTP) | OSI
                   Model
@@ -285,7 +297,13 @@
               </div>
             </li>
             <li>
-              <div class="skill-heading">Responsive Web Design</div>
+              <a
+                href="https://www.freecodecamp.org/certification/ahmedryanfaiyaz/responsive-web-design"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="skill-heading">Responsive Web Design</div>
+              </a>
               <div class="skill-organization">
                 <p>
                   Issued by
@@ -294,15 +312,19 @@
                 <p class="skill-date">Oct, 2023</p>
               </div>
               <div class="skill-subheading">
-                <!-- <p>Skills</p>
-                <p>|</p> -->
                 <p>
                   HTML5 | Cascading Style Sheets (CSS) | Responsive Web Design
                 </p>
               </div>
             </li>
             <li>
-              <div class="skill-heading">Foundational C# With Microsoft</div>
+              <a
+                href="https://www.freecodecamp.org/certification/ahmedryanfaiyaz/foundational-c-sharp-with-microsoft"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="skill-heading">Foundational C# With Microsoft</div>
+              </a>
               <div class="skill-organization">
                 <p>
                   Issued by
@@ -311,8 +333,6 @@
                 <p class="skill-date">Sept, 2023</p>
               </div>
               <div class="skill-subheading">
-                <!-- <p>Skills</p>
-                <p>|</p> -->
                 <p>C#</p>
               </div>
             </li>
