--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <ul class="about-research-interests">
             <li>Malware Analysis and Detection Techniques</li>
             <li>Vulnerability Research and Exploit Development</li>
-            <li>Automated Software Test</li>
+            <li>Automated Software Testing</li>
           </ul>
 
           <p class="about-contact-me">
