feature: links added;

--- a/html/extracurricular.html
+++ b/html/extracurricular.html
@@ -161,9 +161,24 @@
               As the President of the IIT Software Engineers Community, I
               managed the overall club operations and served as its
               spokesperson. My tenure focused on enhancing the skills of our
-              members and IIT students by organizing workshops on hackathons,
-              programming, software engineering, and blockchain. Additionally,
-              we facilitated on-site recruitment with companies like Samsung.
+              members and IIT students by organizing
+              <a
+                href="https://www.facebook.com/share/ebzKwqP8J3Zaqd87/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                programs
+              </a>
+              and workshops on hackathons, programming, software engineering,
+              and blockchain. Additionally, we facilitated
+              <a
+                href="https://www.facebook.com/share/rT95gfDq5rJywp5A/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                on-site recruitment
+              </a>
+              with companies like Samsung.
             </div>
           </li>
 
@@ -185,11 +200,32 @@
               Community, I assisted in managing internal affairs and contributed
               to several key initiatives. Before COVID, I helped organize an
               indoor games tournament for students. During the pandemic, I was
-              involved in <strong>Fight for Life</strong>, a COVID relief fund
-              initiative, and anchored <strong>IITTalks</strong>, a talk show
-              series featuring alumni. Afterward, I helped organize
-              <strong>ITVerse</strong>, the largest online IT Fest in post-COVID
-              Bangladesh.
+              involved in
+              <a
+                href="https://www.facebook.com/share/pXQ87P7MDyXaqK2y/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Fight for Life
+              </a>
+              , a COVID relief fund initiative, and anchored
+              <a
+                href="https://youtube.com/playlist?list=PL0oODOQZa7HQmh0TW7H6Sr1Jl-5UybnlE&si=bW1w_DSR0M9AgXGK"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                IITTalks
+              </a>
+              , a talk show series featuring alumni. Afterward, I helped
+              organize
+              <a
+                href="https://www.thedailystar.net/shout/news/iit-du-holds-itverse-software-engineers-convention-2009081?fbclid=IwY2xjawGOGsxleHRuA2FlbQIxMQABHTUJHS0RIMoH4yPXYIw1BeOScjRmuDUhIjpQKQCunvhLIcPaBaI1HiG1Cg_aem_Ay5_Zg8sj4IryikZ_19VRA"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                ITVerse
+              </a>
+              , the largest online IT Fest in post-COVID Bangladesh.
             </div>
           </li>
 
@@ -209,12 +245,32 @@
               <!-- <i class="fa-solid fa-bullseye"></i> -->
               As the Assistant Office Secretary of the IIT Software Engineers
               Community, I managed administrative duties while actively
-              contributing to key initiatives like <strong>TechCrunch</strong>,
-              a hands-on seminar for college students, and
-              <strong>TechCrunch 2.0</strong>, a program funded by the Asian
-              Development Bank to promote female participation in IT.
-              Additionally, I organized several events aimed at enhancing the
-              technical skills of IIT students.
+              contributing to key initiatives like
+              <a
+                href="https://www.facebook.com/share/4ZjHWtAKgmVYczs4/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                TechCrunch
+              </a>
+              , a hands-on seminar for college students, and
+              <a
+                href="https://www.facebook.com/share/qqEZdE9awcoh5xyh/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                TechCrunch 2.0
+              </a>
+              , a program funded by the Asian Development Bank to promote female
+              participation in IT. Additionally, I organized several
+              <a
+                href="https://www.facebook.com/share/Hv6aXU51rhT4xzpH/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                events
+              </a>
+              aimed at enhancing the industry-academia relationship.
             </div>
           </li>
         </ul>
