--- a/index.html
+++ b/index.html
@@ -159,13 +159,14 @@
             <strong>Intelligent Systems and HCI Research Group</strong>, where
             I’m exploring how to apply AI to improve the
             <strong>automated detection of community smells</strong> in software
-            systems. This blend of industry experience and research has equipped me to effectively bridge theory and practice, and I’m actively seeking opportunities for higher studies in Software Security for Fall ’25.
+            systems. This blend of industry experience and research has equipped me to effectively bridge theory and practice, and I’m actively seeking opportunities for higher studies in Cyber Security for Fall ’25.
           </div>
 
           <div class="about-research-introduction">
             Research Interest Areas:
           </div>
           <ul class="about-research-interests">
+            <li>Software Security</li>            
             <li>Cyber Threat Intelligence</li>
             <li>Malware Analysis and Detection Techniques</li>
             <li>Vulnerability Research and Exploit Development</li>
