feature: info updated;

--- a/html/skill.html
+++ b/html/skill.html
@@ -241,11 +241,31 @@
           <ul>
             <li>
               <a
+                href="https://www.secureflag.com/s?7b6819c5-db5d-4d1d-8452-69d2094018e5"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="skill-heading"
+              >
+                OWASP Top 10:2021 in .NET with C# Learning Path
+              </a>
+              <div class="skill-organization">
+                <p>
+                  Issued by <a href="https://www.secureflag.com/">SecureFlag</a>
+                </p>
+                <p class="skill-date">Feb, 2025</p>
+              </div>
+              <div class="skill-subheading">
+                <p>Secure Coding | C# | .NET</p>
+              </div>
+            </li>
+            <li>
+              <a
                 href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-QSDBO8ZMTY.png"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="skill-heading"
               >
-                <div class="skill-heading">Complete Beginner</div>
+                Complete Beginner
               </a>
               <div class="skill-organization">
                 <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
@@ -263,8 +283,9 @@
                 href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-J3KIUPW33Q.png"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="skill-heading"
               >
-                <div class="skill-heading">Introduction to Cyber Security</div>
+                Introduction to Cyber Security
               </a>
               <div class="skill-organization">
                 <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
@@ -282,8 +303,9 @@
                 href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-MDVZENTFUM.png"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="skill-heading"
               >
-                <div class="skill-heading">Pre Security</div>
+                Pre Security
               </a>
               <div class="skill-organization">
                 <p>Issued by <a href="https://tryhackme.com/">TryHackMe</a></p>
@@ -301,8 +323,9 @@
                 href="https://www.freecodecamp.org/certification/ahmedryanfaiyaz/responsive-web-design"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="skill-heading"
               >
-                <div class="skill-heading">Responsive Web Design</div>
+                Responsive Web Design
               </a>
               <div class="skill-organization">
                 <p>
@@ -322,8 +345,9 @@
                 href="https://www.freecodecamp.org/certification/ahmedryanfaiyaz/foundational-c-sharp-with-microsoft"
                 target="_blank"
                 rel="noopener noreferrer"
+                class="skill-heading"
               >
-                <div class="skill-heading">Foundational C# With Microsoft</div>
+                Foundational C# With Microsoft
               </a>
               <div class="skill-organization">
                 <p>
