--- a/html/skill.html
+++ b/html/skill.html
@@ -241,6 +241,25 @@
           <ul>
             <li>
               <a
+                href="https://www.secureflag.com/s?b3817ad8-f046-4381-b89c-677b9c501e4a"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="skill-heading"
+              >
+                Introductory Regression Test Writing with Postman Learning Path
+              </a>
+              <div class="skill-organization">
+                <p>
+                  Issued by <a href="https://www.secureflag.com/">SecureFlag</a>
+                </p>
+                <p class="skill-date">Mar, 2025</p>
+              </div>
+              <div class="skill-subheading">
+                <p>Secure Coding | Postman | Software Testing</p>
+              </div>
+            </li>
+            <li>
+              <a
                 href="https://www.secureflag.com/s?7b6819c5-db5d-4d1d-8452-69d2094018e5"
                 target="_blank"
                 rel="noopener noreferrer"
